# lasem

./: .gitignore  COPYING  MAINTAINERS  Makefile.am  NEWS  NEWS.md  README  README.md  RELEASING  TODO  alias.Trait.html  autogen.sh  building.html  callback.DomDocumentCreateFunction.html  class.DomCharacterData.html  class.DomDocument.html  class.DomDocumentFragment.html  class.DomElement.html  class.DomNamedNodeMap.html  class.DomNode.html  class.DomNodeList.html  class.DomText.html  class.DomView.html  classes_hierarchy.html  configure.ac  const.DOM_VIEW_DEFAULT_RESOLUTION.html  const.DOM_VIEW_DEFAULT_VIEWBOX_HEIGHT.html  const.DOM_VIEW_DEFAULT_VIEWBOX_WIDTH.html  ctor.AttributeManager.new.html  ctor.DomDocument.new_from_memory.html  ctor.DomDocument.new_from_path.html  ctor.DomDocument.new_from_url.html  ctor.DomDocumentFragment.new.html  ctor.DomText.new.html  ctor.PropertyManager.new.html  enum.DebugLevel.html  enum.DomNodeType.html  func.PROPERTY_ID_TO_OFFSET.html  func.PROPERTY_OFFSET_TO_ID.html  func.cairo_box_device_to_user.html  (+153 more)
demo/: demo.c  meson.build  test.mml
docs/: Makefile.am  lasem-render-0.4.1  lasem-render-0.6.1  meson.build
docs/reference/lasem/: .gitignore  Makefile.am  building.md  lasem-docs.xml  lasem-overview.xml  lasem-sections.txt  lasem.toml.in  lasem.types  meson.build  overview.md
itex2mml/: .gitignore  COPYING.itex2MML  Makefile.am  README.itex2MML  itex2MML.h  itex2MML.l  itex2MML.y  meson.build
po/: .gitignore  LINGUAS  POTFILES.in  POTFILES.skip  bs.po  cs.po  da.po  de.po  el.po  es.po  eu.po  fr.po  fur.po  gl.po  hu.po  id.po  it.po  ka.po  lt.po  lv.po  meson.build  nb.po  nl.po  oc.po  pl.po  pt.po  pt_BR.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  tg.po  tr.po  zh_CN.po
samples/: .gitignore  mozilla-01.xml  mozilla-06.xml  mozilla-08.xml  mozilla-15.xml  mozilla-27.xml  sample1.xml
src/: .gitignore  Makefile.am  gdom.h  gdomattributes.c  gdomattributes.h  gdomcharacterdata.c  gdomcharacterdata.h  gdomdebug.c  gdomdebug.h  gdomdocument.c  gdomdocument.h  gdomelement.c  gdomelement.h  gdomimplementation.c  gdomimplementation.h  gdomnode.c  gdomnode.h  gdomnodelist.c  gdomnodelist.h  gdomparser.c  gdomparser.h  gdomtext.c  gdomtext.h  gdomview.c  gdomview.h  gmathml-test.c  gmathml.h  gmathmlactionelement.c  gmathmlactionelement.h  gmathmlaligngroupelement.c  gmathmlaligngroupelement.h  gmathmlalignmarkelement.c  gmathmlalignmarkelement.h  gmathmlattributes.c  gmathmlattributes.h  gmathmlconvert.c  gmathmldocument.c  gmathmldocument.h  gmathmlelement.c  gmathmlelement.h  (+375 more)
test/: .gitignore
tests/: .gitignore  Makefile.am  css.c  dom.c  extents.c  filter.c  fuzztest.sh  lasem.supp  lsmtest.c  meson.build  str.c  suite.c  suite.ini  valgrind-memcheck
tests/data/: .gitignore
tests/data/mathml/gtkmathview/accents/: accentDotlessI.mml  accentOverBboxTable2.mml  accentOverGreekTable2.mml
tests/data/mathml/gtkmathview/stretch/: stretch0.mml  stretch1.mml
tests/data/mathml/gtkmathview/tables/: table0.mml  tabletest.mml
tests/data/mathml/misc/: complex-sub-sup.mml  itex.mml  libreoffice1.mml  mover-hat-accent.mml  simple-operator.mml  test14.mml
tests/data/mathml/mozilla/: mozilla-21.mml
tests/data/mathml/testsuite/Presentation/GeneralLayout/menclose/: menclose-circle.mml  menclose-downdiagonalstrike.mml  menclose-longdiv.mml  menclose-madruwb.mml  menclose-roundedbox.mml  menclose-updiagonalstrike.mml  menclose-verticalstrike.mml  rec-enclose1.mml
tests/data/mathml/testsuite/Presentation/GeneralLayout/mfenced/: mfenced4.mml  mfencedAdelims6.mml  mfencedAempty.mml
tests/data/mathml/testsuite/Presentation/GeneralLayout/mfrac/: mfracBheight17.mml  mfracBvert12.mml
tests/data/mathml/testsuite/Presentation/GeneralLayout/mpadded/: mpadded17.mml  mpadded2.mml
tests/data/mathml/testsuite/Presentation/GeneralLayout/mrow/: mrowBinferred2.mml
tests/data/mathml/testsuite/Presentation/GeneralLayout/msqrt-mroot/: msqrtB7.mml
tests/data/mathml/testsuite/Presentation/GeneralLayout/mstyle/: mstyle1.mml
tests/data/mathml/testsuite/Presentation/ScriptsAndLimits/mover/: mover2.mml
tests/data/mathml/testsuite/Presentation/ScriptsAndLimits/msubsup/: msubsup1.mml
tests/data/mathml/testsuite/Presentation/ScriptsAndLimits/msup/: msupBsize3.mml
tests/data/mathml/testsuite/Presentation/TablesAndMatrices/mlabeledtr/: mlabeledtrAside1.mml
tests/data/mathml/testsuite/Presentation/TablesAndMatrices/mtable/: deprecated-mtd2.mml  mtableBsize2.mml  mtableBspan3.mml
tests/data/mathml/testsuite/Presentation/TablesAndMatrices/nested/: mtableAwidth1.mml
tests/data/mathml/testsuite/Presentation/TokenElements/CommonAttributes/: hexcolors2.mml
tests/data/mathml/testsuite/Presentation/TokenElements/ignore-mglyph/: rec-mglyph1.mml
tests/data/mathml/testsuite/Presentation/TokenElements/mi/: mi1.mml  miAtoken5.mml  miScolorname15.mml  miequivalents11.mml
tests/data/mathml/testsuite/Presentation/TokenElements/mn/: mnAtoken7.mml
tests/data/mathml/testsuite/Presentation/TokenElements/mo/: moAlrspace13.mml  moAminmax14.mml  moAstretchy18.mml
tests/data/mathml/testsuite/Presentation/TokenElements/ms/: msAtoken4.mml
tests/data/mathml/testsuite/Presentation/TokenElements/mtext/: mtextAtoken3.mml
tests/data/mathml/testsuite/Topics/LargeOp/: chain1.mml  chain2.mml  int9.mml
tests/data/mathml/testsuite/Topics/LineBreak/newline/: indent2.mml
tests/data/mathml/testsuite/Topics/StretchyChars/horizontal/: stretchHoriz1.mml
tests/data/mathml/testsuite/Topics/StretchyChars/integral/: int3.mml  int7.mml  intSize1.mml
tests/data/mathml/testsuite/Topics/StretchyChars/vertical/: mid1.mml
tests/data/mathml/testsuite/Topics/WhiteSpace/: white10.mml  white5.mml
tests/data/mathml/testsuite/TortureTests/Complexity/: another-ramanujan-identity.mml
tests/data/mathml/tex/fractions/: fraction-03.tex  fraction.tex
tests/data/mathml/tex/misc/: cases-space.tex  complex-inline.tex
tests/data/mathml/tex/scripts/: sums.tex
tests/data/svg/svg1.2/images/: svgRef4.css
tools/: change-license  charlist.dtd  fuzzxml  (+2 more)
viewer/: meson.build  viewer.c
(+557 files in other folders)
